feat(document): add approval document canvas templates